Tomcat-DB/fcc_tomcat_oracle/fcc-oracle-app-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: fccoracleapp-svc
  labels:
    app: fcc_oracle_app
spec:
  # type: NodePort
  selector:
    app: fcc_oracle_app
  ports:
  - port: 8080
    targetPort: 8080
status:
  loadBalancer: {}
