Tomcat-DB/fcc_tomcat_oracle/fcc-oracledb-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: fccoracledb-svc
  labels:
    app: fcc_oracle_app
spec:
  # type: NodePort
  selector:
    app: fcc_oracle_app
  ports:
  - port: 1521
    targetPort: 1521
